<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment02"
    android:background="@drawable/backgroundproject_uas">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/Ppp"
            android:layout_width="325dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:hint="@string/panjang"
            android:inputType="number"
            android:outlineProvider="background"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="39dp" />

        <EditText
            android:id="@+id/Lpp"
            android:layout_width="325dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/lebar"
            android:inputType="number"
            android:outlineProvider="background"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="39dp" />

        <TextView
            android:id="@+id/hasilpp"
            android:layout_width="144dp"
            android:layout_height="38dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/hasil" />

        <Button
            android:id="@+id/convertButton"
            android:layout_width="325dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="Convert"
            tools:ignore="DuplicateIds" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="368dp"
            android:layout_height="185dp"
            app:srcCompat="@drawable/persegi_panjang" />

    </LinearLayout>

</FrameLayout>